2014-12-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Fix indentation and long lines.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-time-format): Remove variable.
	(soap-encode-xs-basic-type): Simplify date-time format detection.
	(soap-decode-xs-basic-type): Remove soap-time-format support.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-process-url-response): New function.
	(soap-fetch-xml-from-url): Call soap-process-url-response.
	(soap-parse-wsdl-phase-1): New function.
	(soap-parse-wsdl-phase-2): Likewise.
	(soap-parse-wsdl-phase-3): Likewise.
	(soap-parse-wsdl-phase-4): Likewise.
	(soap-parse-wsdl-phase-5): Likewise.
	(soap-parse-wsdl): Call phase functions.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-basic-type): Remove one-argument
	and call.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-date-time): Improve docstring.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xmlschema-imports): Remove variable.
	(soap-parse-schema): Add wsdl argument.  Look up XML schema
	imports from wsdl.
	(soap-load-wsdl): Do not set soap-xmlschema-imports.
	(soap-parse-wsdl): Get XML schema imports from wsdl.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-current-file): Remove variable.
	(soap-wsdl): Add current-file slot.
	(soap-fetch-xml-from-url): Add wsdl argument.  Look up current
	file from wsdl.
	(soap-fetch-xml-from-file): Likewise.
	(soap-fetch-xml): Likewise.
	(soap-load-wsdl): Always create wsdl object first.
	(soap-parse-wsdl): Pass wsdl to soap-fetch-xml.

2014-11-29  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-element): Add is-group slot.
	(soap-xs-parse-element): Set is-group slot.
	(soap-resolve-references-for-xs-element): Skip is-group elements.
	(soap-xs-complex-type): Add is-group slot.